@@ -22,8 +22,10 @@ postgresql-common (90) UNRELEASED; urgency=low
     the test suite. (Closes: #483017)
   * t/TestLib.pm: Return "1" at the end, to avoid "TestLib.pm did not return a
     true value" error on import.
+  * PgCommon.pm, read_conf_file(): Fix parsing of escaped quotes in string
+    values. Add tests to t/005_PgCommon.t. (Closes: #481055)
 
- -- Martin Pitt <mpitt@debian.org>  Mon, 21 Jul 2008 12:00:16 +0200
+ -- Martin Pitt <mpitt@debian.org>  Mon, 21 Jul 2008 12:01:08 +0200
 
 postgresql-common (89) unstable; urgency=low
 
